--- a/index.html
+++ b/index.html
@@ -140,8 +140,12 @@
                         these models. Having the opportunity to implement several machine learning algorithms from scratch gave me
                         a deeper appreciation for how essential mathematics is in both problem-solving and real-world applications.</p>
                     <h2>Professional Experience</h2>
-                    <p>I have research experience at both Montana State University and Mayo Clinic, where I have worked on
-                        machine learning projects involving brain signal analysis and other applications.
+                    <p>I have had the opportunity to get research experience at both Montana State University and Mayo Clinic, where I have worked on
+                        machine learning projects involving brain signal analysis and other applications as well as reverse engineering and embeddings.
+                        Through these experiences, I have found a strong interest in applying machine learning techniques to solve complex problems as
+                        well as interests in optimization algorithms. I have realized that I really enjoy working in research environments where I can
+                        collaborate with others to push the boundaries of what is possible. You can learn more about my professional experience by
+                        visiting my experience page.
                         <a href="experience.html">View my full experience</a>.</p>
                     <h2>Extracurricular Activities and Other Experience</h2>
                     <p>For the past three years, I have been able to be a part of the Spirit of the West Drumline. I started
@@ -167,7 +171,7 @@
                         </a>
                     </div>
 
-                    <h2>Gallery</h2>
+                    <h2>Life Outside of Code</h2>
                     <div class="image-carousel">
                         <button class="carousel-arrow carousel-prev" onclick="moveCarousel(-1)">
                             <i class="fas fa-chevron-left"></i>
