Add Vibe Coded Web App

--- a/personal_projects.html
+++ b/personal_projects.html
@@ -170,6 +170,23 @@
             </div>
 
             <div class="col">
+                <div class="card h-100">
+                    <div class="card-body">
+                        <h5 class="card-title">Earthquake Tracker Web App (Vibe Coding)</h5>
+                        <ul>
+                            <li>Claude Code</li>
+                            <li>Prompt Engineering</li>
+                            <li>Vite, NodeJS, TypeScript</li>
+                        </ul>
+                    </div>
+                    <div class="card-footer d-flex justify-content-between">
+                        <a href="vibe_code.html" class="btn btn-outline-primary" target="_self">View Project</a>
+                        <a href="https://github.com/joshaney324/Earthquake_tracker_vibe_code" class="btn btn-outline-secondary" target="_blank">GitHub</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col">
                 <div class="card h-100 text-center">
                     <div class="card-body">
                         <h5 class="card-title">Recent Project Activity</h5>
