small tag update

--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
                                 <span class="skill-badge">MatPlotLib</span>
                                 <span class="skill-badge">PyTorch</span>
                                 <span class="skill-badge">Razor Pages</span>
+                                <span class="skill-badge">MapBox</span>
                             </div>
                         </div>
                         <div class="skill-category">
@@ -85,8 +86,6 @@
                                 <span class="skill-badge">Git</span>
                                 <span class="skill-badge">GitHub</span>
                                 <span class="skill-badge">Linux</span>
-                                <span class="skill-badge">Mapbox</span>
-                                <span class="skill-badge">SQL Server</span>
                                 <span class="skill-badge">VSCode</span>
                                 <span class="skill-badge">Jetbrains Products</span>
                             </div>
